src/test/deca/context/invalid/created/affect_NULL/VOID.deca
// Description:
//		Affecter null a un void
// Resultats:
//		Erreur contexte Ligne 7 : Variable can't be void

{
	void x = null;
}
